--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	},
 	"license" : "GPL-3.0+",
 	"authors" : [{
-			"name" : "Mattias Lundbäck",
+			"name" : "Mattias Lundback",
 			"email" : "mattias.lundback@ekonomism.us"
 		}
 	],
