--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 			"init.php"
 		],
 		"psr-4" : {
-			"Bolt\\Extension\\mattiaslundback\\Autolink\\" : [ "",
+			"Bolt\\Extensions\\mattiaslundback\\Autolink\\" : [ "",
 				"src/" 
 			]
 		}
