--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
 			"init.php"
 		],
 		"psr-4" : {
-			"Bolt\\Extensions\\mattiaslundback\\Autolink\\" : [ "",
+			"Bolt\\Extensions\\mattiaslundback\\Autolink\\" : "",
 				"src/" 
-			]
 		}
 	}
 }
