--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 			"init.php"
 		],
 		"psr-4" : {
-			"Bolt\\Extensions\\mattiaslundback\\Autolink\\" : ""
+			"Bolt\\Extensions\\mattiaslundback\\autolink\\" : ""
 		}
 	}
 }
