--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -5,4 +5,4 @@
 
 config:
   thumbnail_url: 'https://api.thumbalizr.com/?url=%url%&width=300'
-  google_cse_url: 'https://www.googleapis.com/customsearch/v1?key=AIzaSyDxOMFonkMMdCJXvFqwj-rOcMQnxgDbwlA&cx=%cse%&q=%search%&alt=atom'
+  google_cse_url: 'https://www.googleapis.com/customsearch/v1?key=[key]&cx=%cse%&q=%search%&alt=atom'
